:relaxed:
1. 删除 swagger 文档
2. 删除 http request log